adding a new route for get all users, and updating the swagger
